# SixtrackCollimationTools

./: .gitignore  CMakeLists.txt  CTestConfig.cmake
SixtrackCollimationTools/: Aperture.cpp  Aperture.h  ApertureTypes.h  AssignOneMetre.cpp  AssignOneMetre.h  BeamLossPattern.cpp  CMakeLists.txt  CleanInelastic.cpp  CountNabs.cpp  GetAperture.cpp  Makefile  OneMetre.cpp  OneMetre.h  OneMetreAlign.cpp  OneMetreAlign.h  ReadTwiss.cpp  ReadTwiss.h  Survey.cpp  Survey.h
Testing/: CMakeLists.txt
Tests/: CMakeLists.txt
