add_executable(BeamLossPattern BeamLossPattern.cpp Aperture.cpp OneMetre.cpp ReadTwiss.cpp AssignOneMetre.cpp Survey.cpp OneMetreAlign.cpp)
add_executable(GetAperture GetAperture.cpp Aperture.cpp OneMetre.cpp ReadTwiss.cpp AssignOneMetre.cpp Survey.cpp OneMetreAlign.cpp)
add_executable(CountNabs CountNabs.cpp)
add_executable(CleanInelastic CleanInelastic.cpp)